# usb-stuff

usb_app/: CMakeLists.txt  Kconfig  README.md
usb_app/app/: CMakeLists.txt  Kconfig  config.cmake  prj.conf
usb_app/app/boards/: mimxrt1060_evkb.overlay
usb_app/app/include/: board.h  ffconf.h
usb_app/app/osa/: component_osa.cmake  fsl_os_abstraction.h  fsl_os_abstraction_zephyr.c
usb_app/app/src/: host_msd_fatfs.c  main.c
usb_app/app/usb/: middleware_usb_device_controller_driver.cmake  middleware_usb_device_ehci.cmake  middleware_usb_device_ehci_config_header.cmake  middleware_usb_host_ehci.cmake  middleware_usb_host_ehci_config_header.cmake  middleware_usb_host_stack.cmake  middleware_usb_pd_phy_ptn5110.cmake  middleware_usb_phy.cmake  middleware_usb_phydcd.cmake
usb_app/app/usb/include/: usb_misc.h
